--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,21 @@
   z-index: 50;
 }
 
+.textFail {
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+}
+
+.bloc-presentation {
+  text-align: center;
+  color: #fff;
+}
+
+.bloc-presentation h1 {
+  width: 100%;
+}
+
 /* media */
 @media screen and (max-width: 1300px) {
   .movieslist {
